style.css
@font-face {
    font-family: "MainFont";
    src: url("fonts/KarmaSuture.ttf");
}

html {
    font-size: 20px;
}

@media (max-width: 900px) {
    html { font-size: 16px; }
}

@media (max-width: 400px) {
    html { font-size: 16px; }
}

body {
    color: white;
    margin: 0;
    font-family: 'MainFont', Roboto, sans-serif;
    max-width: 100%;
}

canvas {
    display: block;
    vertical-align: bottom;
}

#particles-js {
    position: fixed;
    width: 100%;
    max-width: 100%;
    height: 100vh;
    background-color: #0D1F2D;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
    z-index: -1;
    -webkit-backface-visibility: hidden;
}

header {
    height: 100vh;
}

nav {
    display: flex;
    justify-content: space-between;
    flex: 1;
    background-color: #546A7B;
}

nav .title {
    display: flex;
    flex: 1;
    align-items: center;
}

nav .title img {
    width: auto;
    height: 2em;
    margin: 10px;
}

nav .title .button {
    padding-left: 5px;
}

nav .buttons {
    display: flex;
    flex: 1;
    justify-content: flex-end;
}

.button {
    font-size: 1.0em;
    padding: 10px 20px;
    white-space: nowrap;
    display: flex;
    align-items: center;
}

.button p {
    margin: 0;
    padding: 0;
}

.button:hover {
    background-color: #0000000F;
}

a {
    color: white;
    text-decoration: none;
}

#bodyContent {
    width: 90%;
    max-width: 90%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: auto;
}

.hero {
    height: 70%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

h1 {
    font-size: 2.5em;
    text-align: center;
}

.hero a {
    text-decoration: underline;
}

.downloadButton {
    background-color: #546A7B;
    border-radius: 5px;
    font-size: 1.2em;
    padding: 10px 20px;
    white-space: nowrap;
    display: flex;
    align-items: center;
    border: 1px solid white;
}

.downloadButton:hover {
    background-color: #0D1F2D;
}

section {
    display: flex;
    flex-direction: column;
    flex: 1;
    width: 100%;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
}

.sectionSeparator {
    height: 10em;
}

.sectionActions {
    display: flex;
    flex-direction: row;
    justify-content: center;
    column-gap: 2em;
    width: 100%;
    margin-top: 4em;
    flex-wrap: wrap;
    row-gap: 2em;
}


section h2 {
    text-align: center;
}

#app h3 {
    text-align: center;
}

#app img {
    width: 45%;
}

#features h3 {
}

.feature {
    display: flex;
    flex-direction: row;
    flex: 1;
    justify-content: center;
    margin-top: 5em;
    width: 70%;
}

@media only screen and (max-width: 600px) {
    .feature {
        flex-direction: column;
        flex: 1;
        justify-content: center;
        align-items: center;
        margin-top: 5em;
        width: 70%;
    }

    .featureReverse {
        flex-direction: column-reverse;
    }
}

.feature img {
    max-width: 100%;
    width: 25em;
    height: auto;
    border-radius: 40px;
    border: 1px solid #546A7B;
}

.feature div {
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: center;
    width: 100%;
    background-color: #0D1F2DB0;
    border-radius: 40px;
}

.feature .imageDivRight {
    align-items: flex-start;
}

.feature .imageDivLeft {
    align-items: flex-end;
}

.table {
    max-width: 90vw;
    overflow-x: auto;
}

table, th, td {
    border: 1px solid white;
    border-collapse: collapse;
    padding: 0.25em 0.5em;
    background-color: #0D1F2DB0;
}

th {
    text-align: start;
}

.vpnName {
    text-align: center;
}

td {
    text-align: center;
}

.breakitColumn {
    font-size: 1.5em;
    border: 2px solid green;
}

#team img {
    border-radius: 10px;
    max-width: 90%;
}

#team h3 {
    text-align: center;
    width: 100%;
}

.teamText {
    background-color: #0D1F2DB0;
    border: 1px solid #546A7B;
    padding: 0.25em 1em;
}

